Added searching functionality.
Still needs to be polished a lot.